<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="0.5"
                android:background="@color/colorDivider"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:text="@string/mach_add"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="0.5"
                android:background="@color/colorDivider"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:text="@string/mach_subtract"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSubtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="0.5"
                android:background="@color/colorDivider"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:textStyle="bold"
                    android:text="@string/mach_multiply"/>

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="0.5"
                android:background="@color/colorDivider"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp16"
                    android:textStyle="bold"
                    android:text="@string/mach_divide"/>

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>